--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
+    "lottie-web": "^5.13.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
